Fix scrollbar on tasks

--- a/css/index.styl
+++ b/css/index.styl
@@ -131,8 +131,8 @@ header
 $task-color = #d9d9d9
 
 .main
-  abs(0, 290px, 0, 0)
-  padding: 40px 20px 0 30px
+  abs(40px, 290px, 0, 0)
+  padding: 0 20px 0 30px
   overflow-y: hidden
   overflow-y: auto
 
